added packages for karma, for when the time comes

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-typescript": "^0.4.1",
+    "karma": "^0.12.24",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-jasmine": "^0.2.3",
     "typescript": "^1.1.0-1"
   }
 }
