--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.9.0",
     "grunt-typescript": "^0.4.1",
+    "jasmine": "^2.0.1",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
     "karma-jasmine": "^0.2.3",
+    "karma-phantomjs-launcher": "^0.1.4",
     "typescript": "^1.1.0-1"
   }
 }
