--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "canal.js",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "homepage": "https://github.com/xueye/canal.js",
   "authors": [
     "Phil Barresi <me@philbarresi.com>"
@@ -23,8 +23,8 @@
     ".gitignore",
     "Gruntfile.js",
     "karma.conf.js",
-    "dist/dev",
-    "dist/0.1.0",
+    "dist/*",
+    "dist/!edge/*",
     "node_modules",
     "bower_components",
     "test",
